--- a/palmx.vcxproj
+++ b/palmx.vcxproj
@@ -19,47 +19,47 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="demo\Main.cpp" />
-    <ClCompile Include="demo\PlayerController.cpp" />
-    <ClCompile Include="src\entity\Camera.cpp" />
-    <ClCompile Include="src\entity\Renderer.cpp" />
-    <ClCompile Include="src\input\Input.cpp" />
-    <ClCompile Include="src\entity\Entity.cpp" />
-    <ClCompile Include="src\entity\Scene.cpp" />
-    <ClCompile Include="src\input\InputManager.cpp" />
-    <ClCompile Include="src\Root.cpp" />
-    <ClCompile Include="src\gui\WindowManager.cpp" />
-    <ClCompile Include="src\rendering\Mesh.cpp" />
-    <ClCompile Include="src\rendering\Model.cpp" />
-    <ClCompile Include="src\rendering\RenderManager.cpp" />
-    <ClCompile Include="src\rendering\Shader.cpp" />
-    <ClCompile Include="src\entity\SceneManager.cpp" />
-    <ClCompile Include="src\logging\LogManager.cpp" />
-    <ClCompile Include="src\filesystem\ResourceManager.cpp" />
-    <ClCompile Include="src\entity\Transform.cpp" />
+    <ClCompile Include="src\demo\Main.cpp" />
+    <ClCompile Include="src\demo\PlayerController.cpp" />
+    <ClCompile Include="src\renderer\Camera.cpp" />
+    <ClCompile Include="src\renderer\Renderer.cpp" />
+    <ClCompile Include="src\engine\Input.cpp" />
+    <ClCompile Include="src\engine\Entity.cpp" />
+    <ClCompile Include="src\engine\Scene.cpp" />
+    <ClCompile Include="src\engine\InputModule.cpp" />
+    <ClCompile Include="src\engine\Engine.cpp" />
+    <ClCompile Include="src\gui\GuiModule.cpp" />
+    <ClCompile Include="src\renderer\Mesh.cpp" />
+    <ClCompile Include="src\renderer\Model.cpp" />
+    <ClCompile Include="src\renderer\RenderModule.cpp" />
+    <ClCompile Include="src\renderer\Shader.cpp" />
+    <ClCompile Include="src\engine\SceneModule.cpp" />
+    <ClCompile Include="src\engine\Logger.cpp" />
+    <ClCompile Include="src\engine\ResourceManager.cpp" />
+    <ClCompile Include="src\renderer\Transform.cpp" />
     <ClCompile Include="external\glad\glad.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\entity\Renderer.h" />
-    <ClInclude Include="src\entity\ScriptBehavior.h" />
-    <ClInclude Include="src\entity\ScriptHook.h" />
-    <ClInclude Include="src\input\Input.h" />
-    <ClInclude Include="src\entity\Camera.h" />
-    <ClInclude Include="src\entity\Entity.h" />
-    <ClInclude Include="src\entity\Scene.h" />
-    <ClInclude Include="src\input\InputManager.h" />
-    <ClInclude Include="src\Root.h" />
-    <ClInclude Include="src\Singleton.h" />
-    <ClInclude Include="src\rendering\Mesh.h" />
-    <ClInclude Include="src\rendering\Model.h" />
-    <ClInclude Include="src\rendering\RenderManager.h" />
-    <ClInclude Include="src\rendering\Shader.h" />
-    <ClInclude Include="src\filesystem\ResourceManager.h" />
-    <ClInclude Include="src\logging\LogManager.h" />
-    <ClInclude Include="src\entity\SceneManager.h" />
-    <ClInclude Include="src\entity\SceneView.h" />
+    <ClInclude Include="src\renderer\Renderer.h" />
+    <ClInclude Include="src\engine\ScriptBehavior.h" />
+    <ClInclude Include="src\engine\ScriptHook.h" />
+    <ClInclude Include="src\engine\Input.h" />
+    <ClInclude Include="src\renderer\Camera.h" />
+    <ClInclude Include="src\engine\Entity.h" />
+    <ClInclude Include="src\engine\Scene.h" />
+    <ClInclude Include="src\engine\InputModule.h" />
+    <ClInclude Include="src\engine\Engine.h" />
+    <ClInclude Include="src\engine\Singleton.h" />
+    <ClInclude Include="src\renderer\Mesh.h" />
+    <ClInclude Include="src\renderer\Model.h" />
+    <ClInclude Include="src\renderer\RenderModule.h" />
+    <ClInclude Include="src\renderer\Shader.h" />
+    <ClInclude Include="src\engine\ResourceManager.h" />
+    <ClInclude Include="src\engine\Logger.h" />
+    <ClInclude Include="src\engine\SceneModule.h" />
+    <ClInclude Include="src\engine\SceneView.h" />
     <ClInclude Include="include\stb\stb_image.h" />
-    <ClInclude Include="src\entity\Transform.h" />
+    <ClInclude Include="src\renderer\Transform.h" />
     <ClInclude Include="game\PlayerController.h" />
   </ItemGroup>
   <ItemGroup>
@@ -173,7 +173,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ShowIncludes>false</ShowIncludes>
-      <AdditionalIncludeDirectories>$(ProjectDir)/external;$(ProjectDir)/src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)/external</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
